# acquire-zarr

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  flake.nix  justfile  pyproject.toml  setup.py  vcpkg.json
.github/actions/setup-cmake/: action.yml
.github/actions/setup-sccache/: action.yml
.github/actions/setup-vcpkg/: action.yml
.github/workflows/: benchmark.yml  build.yml  release.yml  test-shim.yml  test.yml  wheels.yml
benchmarks/: Dockerfile  benchmark.py  docker-compose.yml  plot_benchmarks.py  run_all.sh
examples/: README.md  stream-compressed-multiscale-to-s3.c  stream-compressed-to-filesystem.c  stream-compressed-to-s3.c  stream-raw-to-filesystem.c  stream-raw-to-s3.c
examples/python/: stream_compressed_multiscale_s3.py  stream_compressed_s3.py  stream_compressed_to_filesystem.py  stream_multiarray_to_filesystem.py  stream_raw_filesystem.py  stream_raw_multiscale_filesystem.py  stream_raw_to_s3.py
include/: acquire.zarr.h  zarr.types.h
python/: acquire-zarr-py.cpp
python/acquire_zarr/: __init__.pyi
python/tests/: test_dimension_transposition.py  test_stream.py
scripts/: generate-launch.py
shim/: CMakeLists.txt  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  plan.md  shim.c  shim_array.c  shim_array.h  shim_backend.h  shim_convert.c  shim_convert.h  shim_hcs.c  shim_hcs.h  shim_hcs_json.c  shim_hcs_json.h  shim_internal.h  shim_log.c  shim_log.h  shim_settings.c  shim_sink.c  shim_sink.h  shim_util.c  shim_util.h  vcpkg.json
shim/compat/: logger.cpp  logger.hh
shim/pybind/: CMakeLists.txt
shim/python/: pyproject.toml  setup.py
shim/python-gpu/: pyproject.toml  setup.py
shim/tests/integration/: stream-2d-multiscale-to-filesystem.cpp  stream-3d-multiscale-to-filesystem.cpp  stream-multiple-arrays-to-filesystem.cpp
src/logger/: logger.hh  logger.types.h
src/streaming/: CMakeLists.txt  acquire.zarr.cpp  array.base.cpp  array.base.hh  array.cpp  array.dimensions.cpp  array.dimensions.hh  array.hh  compression.params.hh  locked.buffer.cpp  locked.buffer.hh  lz4.compression.params.hh  multiscale.array.cpp  multiscale.array.hh  sink.cpp  sink.hh  thread.pool.cpp  zarr.common.cpp  zarr.common.hh  zarr.stream.cpp  zarr.stream.hh  zstd.compression.params.hh
src/streaming/win32/: platform.cpp
tests/integration/: CMakeLists.txt  compressed-test-helper.hh  estimate-memory-usage.cpp  s3-test-helpers.hh  stream-2d-multiscale-to-filesystem.cpp  stream-3d-multiscale-to-filesystem.cpp  stream-append-nullptr.cpp  stream-compressed-to-filesystem.cpp  stream-compressed-to-s3.cpp  stream-lz4-compressed-to-filesystem.cpp  stream-mixed-flat-and-hcs-acquisition.cpp  stream-multi-frame-append.cpp  stream-multiple-arrays-to-filesystem.cpp  stream-multiscale-trivial-3rd-dim.cpp  stream-named-array-to-s3.cpp  stream-pure-hcs-acquisition.cpp  stream-raw-to-s3.cpp  stream-throws-on-overflow.cpp  stream-with-ragged-final-shard.cpp  stream-zstd-compressed-to-filesystem.cpp  test.macros.hh
tests/unit-tests/: CMakeLists.txt  array-write-even.cpp  array-write-fixed-size.cpp  array-write-ragged-append-dim.cpp  array-write-ragged-internal-dim.cpp  construct-data-paths.cpp  create-stream-simple-array-root.cpp  downsampler-odd-z.cpp  s3-sink-write-multipart.cpp  s3-sink-write.cpp  stream-write-metadata.cpp  zarr-stream-partial-append.cpp
